Fix fullscreen on mobile

--- a/plugin/YouPHPFlix2/view/css/fullscreen.css
+++ b/plugin/YouPHPFlix2/view/css/fullscreen.css
@@ -7,6 +7,7 @@ body{
     position: fixed;
     top: 0;
     height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     z-index: 99999;
     overflow: hidden;
